# fit-predict-vk-chatbot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  vk_config.v2.json
src/: exceptions.py  main.py  ml.py  schemas.py  utils.py
